--- a/css/principal.css
+++ b/css/principal.css
@@ -2,3 +2,28 @@ body{
     color: green;
     background-color: black;
 }
+
+.frase{
+    font-size: 20px;
+}
+
+.campo-digitacao{
+    font-size: 20px;
+    height: 150px;
+}
+
+.campo-desativado{
+    background-color: lightgray;
+}
+
+.icones{
+    vertical-align: middle;
+}
+
+.borda-verde {
+    border: 3px solid green;
+}
+
+.borda-vermelha {
+    border: 3px solid red;
+} 
