--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,22 +1,19 @@
-body{
-    color: green;
-    background-color: black;
-}
-
-.frase{
+.campo-digitacao {
     font-size: 20px;
+    height: 130px;
+    border: 3px solid black;
 }
 
-.campo-digitacao{
+.frase {
     font-size: 20px;
-    height: 150px;
+    text-align: left;
 }
 
-.campo-desativado{
+.campo-desativado {
     background-color: lightgray;
 }
 
-.icones{
+.icones {
     vertical-align: middle;
 }
 
@@ -26,4 +23,4 @@ body{
 
 .borda-vermelha {
     border: 3px solid red;
-} 
+}
